--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.4",
     "date-fns": "^4.1.0",
+    "tailwindcss": "^4.1.4",
     "vue": "^3.5.13"
   },
   "devDependencies": {
